# RLM_analysis

./: README.md  pyproject.toml
experiments/3_multilingual_reasoning_gap_attribution/: 1_gen_reasoning_trace_with_evaluation_qwen4b.sh  2_aggregate_result.sh  3_residual_analysis.sh  4_measure_translation_ability.sh  5_plot_correlation.sh  README.md
experiments/4_detecting_understanding_failures/: 0_calibration_dataset_inference_4b.sh  1_compute_signal_4b.sh  2_compute_threshold_4b.sh  3_train_mmbert_detector_4b.sh  4_train_prober.sh  5_ut_test.sh  6_ut_aggregate_results.sh  README.md
experiments/5_selective_translation/: 1_inference_translated.sh  2_selective_translation.sh  README.md
src/rlm_analysis/: dataset.py  generate_reasoning_trace_with_evaluation.py  lang_libs.py  selective_translation.py
src/rlm_analysis/eval/: eval_trace_final.py  evaluator.py  scripts.py
src/rlm_analysis/multilingual_reasoning_gap_attribution/: aggregate_multilingual_reasoning_result.py  eval_translation_ability_gemba_da.py  plot_correlation.py  residual_analysis.py
src/rlm_analysis/understanding_failure_detection/: ut_aggregate_results.py  ut_compute_signals_with_label.py  ut_mmbert_monitoring_train.py  ut_probe_model.py  ut_probe_train.py  ut_test.py
src/rlm_analysis/util/: language_analysis.py  misc.py  parser_llm.py  translate_dataset.py
translated_data/polymath/: polymath_low_translated_to_english.json
