[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rlm_analysis"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "vllm",
  "fasttext==0.9.3",
  "datasets",
  "math-verify",
  "pebble",
  "word2number",
  "matplotlib",
  "scikit-learn",
  "accelerate>=0.26.0",
  "wandb",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
